[gd_scene load_steps=14 format=3 uid="uid://bux1j4jbk8st2"]

[ext_resource type="Script" path="res://src/entities/ingredients/assets/ingredient.gd" id="1_ipyti"]
[ext_resource type="Texture2D" uid="uid://yxjbv4v6ghli" path="res://src/entities/ingredients/assets/normal/ingredient_000.png" id="2_jk5ra"]
[ext_resource type="PackedScene" uid="uid://l82e7lamaemc" path="res://src/components/Selectable/SelectableComponent.tscn" id="4_727f8"]
[ext_resource type="PackedScene" uid="uid://b6irvllg6u58o" path="res://src/components/MouseFollow/MouseFollowComponent.tscn" id="5_unb27"]
[ext_resource type="PackedScene" uid="uid://cojyfxu5j1idb" path="res://src/components/Grabbable/GrabbableComponent.tscn" id="6_etj2y"]
[ext_resource type="Script" path="res://src/components/Hitbox/hitbox_component.gd" id="7_ywfev"]
[ext_resource type="Script" path="res://src/entities/ingredients/consumable_component.gd" id="8_v8v5x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b1q5v"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gvquo"]
radius = 16.0

[sub_resource type="Animation" id="Animation_b8jkv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_d5pk8"]
resource_name = "spawn"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.870551, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.45, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(0.870551, 0.392292, 1.41421, 0.707107, 1.86607, 0.659754, 1.36604, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, 0), Vector2(0, -8), Vector2(0, 0), Vector2(0, -4), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.55),
"transitions": PackedFloat32Array(0.870551, 0.392, 1.41, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_17ngs"]
resource_name = "decay"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35),
"transitions": PackedFloat32Array(0.707, 1.51, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.721569, 0.721569, 0.721569, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35),
"transitions": PackedFloat32Array(0.707107, 1.51572, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(0.2, 0.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eljat"]
_data = {
"RESET": SubResource("Animation_b8jkv"),
"decay": SubResource("Animation_17ngs"),
"spawn": SubResource("Animation_d5pk8")
}

[node name="Ingredient" type="Node2D" node_paths=PackedStringArray("consumable_component", "hitbox_component", "selectable_component", "grabbable_component", "follow_component")]
script = ExtResource("1_ipyti")
consumable_component = NodePath("ConsumableComponent")
hitbox_component = NodePath("HitboxComponent")
selectable_component = NodePath("SelectableComponent")
grabbable_component = NodePath("GrabbableComponent")
follow_component = NodePath("MouseFollowComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jk5ra")

[node name="SelectableComponent" parent="." node_paths=PackedStringArray("sprite", "area_2d") instance=ExtResource("4_727f8")]
visible = false
sprite = NodePath("../Sprite2D")
area_2d = NodePath("Area2D")

[node name="Area2D" type="Area2D" parent="SelectableComponent"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectableComponent/Area2D"]
visible = false
shape = SubResource("CircleShape2D_b1q5v")

[node name="GrabbableComponent" parent="." node_paths=PackedStringArray("selectable_component", "collider") instance=ExtResource("6_etj2y")]
visible = false
collision_layer = 16
collision_mask = 2
selectable_component = NodePath("../SelectableComponent")
collider = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabbableComponent"]
shape = SubResource("CircleShape2D_gvquo")

[node name="MouseFollowComponent" parent="." instance=ExtResource("5_unb27")]
visible = false

[node name="HitboxComponent" type="Node2D" parent="."]
visible = false
script = ExtResource("7_ywfev")

[node name="Area2D" type="Area2D" parent="HitboxComponent"]
collision_layer = 20
collision_mask = 108

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent/Area2D"]
shape = SubResource("CircleShape2D_b1q5v")

[node name="ConsumableComponent" type="Node2D" parent="." node_paths=PackedStringArray("hitbox_component")]
script = ExtResource("8_v8v5x")
hitbox_component = NodePath("../HitboxComponent")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eljat")
}
autoplay = "spawn"

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="area_entered" from="HitboxComponent/Area2D" to="HitboxComponent" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="HitboxComponent/Area2D" to="HitboxComponent" method="_on_area_2d_area_exited"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_decay_timer_timeout"]
